--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,6 +24,7 @@ Version: 1.0
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;600;700&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /*
 01 - Fonts Variable Style
@@ -32,6 +33,7 @@ $body-font-family: "Hanken Grotesk", sans-serif;
 $body-font-family-business-agency: "Poppins", sans-serif;
 $heading-font-family-business-agency: "Syne", sans-serif;
 $helvetica-neue-font-family: 'Helvetica Neue';
+$digital-agency-font-family: "Kanit", sans-serif;
 
 /*
 02 - Color Variable Style
@@ -39,6 +41,7 @@ $helvetica-neue-font-family: 'Helvetica Neue';
 $body-color: #666666;
 $main-color: #FD6219;
 $optional-color: #DCFD68;
+$warm-blue-color: #4A5FE1;
 $heading-color: #030303;
 $white-color: #ffffff;
 $black-color: #000000;
@@ -62,6 +65,12 @@ body {
 	.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
 		font-family: $heading-font-family-business-agency;
 		color: $white-color;
+	}
+}
+.digital-agency-body {
+	font-family: $digital-agency-font-family;
+	.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+		font-weight: 600;
 	}
 }
 .d-table {
@@ -421,6 +430,7 @@ textarea {
 	text-decoration: none;
 	border-radius: 50px;
 	display: inline-block;
+	transform: $transition;
 	i {
 		margin-left: 20px;
 	}
@@ -436,6 +446,14 @@ textarea {
 		&:hover {
 			background-color: $optional-color;
 			color: $heading-color;
+		}
+	}
+	&.style-three {
+		font-family: $digital-agency-font-family;
+		background-color: $warm-blue-color;
+		color: $white-color;
+		&:hover {
+			background-color: $main-color;
 		}
 	}
 }
@@ -550,7 +568,7 @@ textarea {
 }
 
 /*
-13 - Main Navbar Style
+13 - Main Header Style
 <<<<======================================================>>>>*/ 
 .header-wrapper {
 	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
@@ -625,6 +643,63 @@ textarea {
 			border-bottom: 1px solid rgba(255, 255, 255, 0.05);
 			padding-top: 15px;
 			padding-bottom: 15px;
+		}
+	}
+	&.style-three {
+		.main-nav {
+			.navbar {
+				.navbar-nav {
+					.nav-item {
+						.nav-link {
+							color: #121212;
+							font-weight: 400;
+							font-size: 16px;
+						}
+						.dropdown-menu {
+							.nav-item {
+								.nav-link {
+									font-weight: 400;
+									font-size: 16px;
+								}
+								.dropdown-menu {
+									.nav-item {
+										.nav-link {
+											font-weight: 400;
+											font-size: 16px;
+										}
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+			.nav-right-options {
+				.social-link {
+					li {
+						a {
+							background-color: #F5F5F5;
+							color: $heading-color;
+							&:hover {
+								background-color: $warm-blue-color;
+								color: $white-color;
+							}
+						}
+					}
+				}
+				.src-btn {
+					background-color: transparent;
+					font-size: 20px;
+					margin-left: 30px;
+				}
+				.menu-btn {
+					background-color: transparent;
+					font-size: 20px;
+					margin-left: 25px;
+					padding-left: 25px;
+					border-left: 1px solid rgba(217, 217, 217, 0.40);;
+				}
+			}
 		}
 	}
 } 
@@ -1022,6 +1097,59 @@ textarea {
 		right: 13px;
 	}
 }
+.search-offcanvas {
+	height: 166px !important;
+	.offcanvas-header {
+		padding: 30px;
+		padding-bottom: 0;
+		.offcanvas-title {
+			font-size: 20px;
+		}
+	}
+	.offcanvas-body {
+		padding: 30px;
+		padding-top: 20px;
+		.form-control {
+			font-size: 15px;
+			&::placeholder {
+				font-size: 15px;
+			}
+		}
+		.src-btn {
+			background-color: transparent;
+			font-size: 20px;
+			right: 20px !important;
+			transition: $transition;
+			&:hover {
+				color: $main-color;
+			}
+		}
+	}
+	.btn-close {
+		&:focus {
+			box-shadow: none;
+		}
+	}
+}
+.contact-offcanvas {
+	.offcanvas-header {
+		padding: 30px;
+		padding-bottom: 0;
+		.offcanvas-title {
+			font-size: 20px;
+		}
+	}
+	.offcanvas-body {
+		padding: 30px;
+		padding-top: 20px;
+		.form-control {
+			font-size: 15px;
+			&::placeholder {
+				font-size: 15px;
+			}
+		}
+	}
+}
 
 /*
 15 - Banner Style
@@ -1159,6 +1287,10 @@ textarea {
 		top: -350px;
 		right: 0;
 	}
+	&.shape-4 {
+		top: -100px;
+		right: 0;
+	}
 }
 @keyframes rotation {
 	from {
@@ -1223,6 +1355,100 @@ textarea {
 		left: 0;
 		right: 0;
 		z-index: -1;
+	}
+}
+.banner-content-three {
+	position: relative;
+	z-index: 1;
+	h1 {
+		font-size: 300px;
+		font-weight: 500;
+		line-height: 1;
+		margin-bottom: 0;
+		&.agency {
+			text-align: right;
+			color: $warm-blue-color;
+		}
+	}
+	.banner-btn {
+		width: 137px;
+		height: 137px;
+		font-size: 16px;
+		font-weight: 500;
+		display: inline-block;
+		border: 1px solid #121212;
+		border-radius: 100px;
+		text-align: center;
+		position: absolute;
+		color: #121212;
+		top: 80px;
+		right: 216px;
+		background-color: $white-color;
+		i {
+			font-size: 14px;
+		}
+		span {
+			position: absolute;
+			top: 50%;
+			left: 0;
+			right: 0;
+			transform: translateY(-50%);
+		}
+		&:hover {
+			background-color: $warm-blue-color;
+			border-color: $warm-blue-color;
+			color: $white-color;
+		}
+	}
+	.agency-info {
+		max-width: 283px;
+		position: absolute;
+		bottom: -67px;
+		left: 15px;
+		p {
+			font-size: 16px;
+			color: #666666;
+			margin-bottom: 100px;
+		}
+		.map-info {
+			.map-icon {
+				width: 88px;
+				height: 88px;
+				line-height: 88px;
+				text-align: center;
+				background-color: #E4E7FB;
+				border-radius: 100px;
+			}
+			h4 {
+				line-height: 28px; 
+				font-size: 18px;
+				font-weight: 400;
+				color: #121212;
+				margin-bottom: 0;
+				width: 183px;
+			}
+		}
+	}
+}
+.banner-img-three {
+	position: absolute;
+	right: 0;
+	bottom: -39px;
+	z-index: -1;
+}
+.banner-area-three {
+	padding: 138px 0;
+	padding-top: 100px;
+	.scroll-btn {
+		bottom: 0;
+		border-color: $warm-blue-color;
+		color: $warm-blue-color;
+		bottom: -72px;
+		background-color: $white-color;
+		&:hover {
+			background-color: $warm-blue-color;
+			color: $white-color;
+		}
 	}
 }
 
