--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -211,6 +211,9 @@ textarea {
 .bg-color-dcfd68 {
 	background-color: #dcfd68;
 }
+.bg-color-f6f5f3 {
+	background-color: #f6f5f3;
+}
 .bg-img {
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -551,6 +554,11 @@ textarea {
 			font-size: 43px;
 		}
 	}
+	&.style-three {
+		h2 {
+			font-size: 45px;
+		}
+	}
 	&.white-title {
 		h2 {
 			color: $white-color;
@@ -560,11 +568,14 @@ textarea {
 }
 .top-title {
 	font-size: 15px;
-	color: $optional-color;
+	color: $main-color;
 	display: block;
 	margin-bottom: 10px;
-	font-family: $helvetica-neue-font-family;
 	font-weight: 500;
+	&.style-two {
+		color: $optional-color;
+		font-family: $helvetica-neue-font-family;
+	}
 }
 
 /*
@@ -700,6 +711,10 @@ textarea {
 					border-left: 1px solid rgba(217, 217, 217, 0.40);;
 				}
 			}
+		}
+		&.is-sticky {
+			background-color: $white-color !important;
+			box-shadow: $box-shadow;
 		}
 	}
 } 
@@ -1618,68 +1633,116 @@ textarea {
 		font-size: 18px;
 		font-weight: 600;
 	}
-	.skill-bar {
-		margin-bottom: 20px;
-		.progress-title-holder {
-			position: relative;
-		}
-		.progress-title {
-			font-size: 15px;
-			font-weight: 600;
-			margin-bottom: 15px;
-			display: block;
-			color: $heading-color;
-		}
-		.progress-number-wrapper {
-			width: 100%;
-			z-index: 10;
-			font-size: 11px;
-			line-height: 24px;
-			height: 24px;
-			letter-spacing: 0px;
-			font-weight: 600;
-			font-style: normal;
-			text-transform: none;
-			color: $white-color;
-		}
-		.progress-number-mark {
-			margin-bottom: 4px;
-			border-radius: 3px;
-			color: $heading-color;
-			padding: 0 8px;
-			position: absolute;
-			bottom: 0;
-			transform: translateX(-50%);
-			font-size: 16px;
-			font-weight: 600;
-		}
-		.down-arrow {
-			border: 3px solid $main-color;
-			position: absolute;
-			left: 66%;
-    		top: 147%;
-			height: 20px;
-			width: 20px;
-			border-radius: 50px;
-			transform: translateX(-50%);
-		}
-		.progress-content-outter {
-			height: 6px;
-			background-color: #f5f5f5;
-			border-radius: 50px;
-		}
-		.progress-content {
-			height: 6px;
-			background-color: $main-color;
-			width: 0%;
-			border-radius: 50px;
-		}
+}
+.skill-bar {
+	margin-bottom: 20px;
+	.progress-title-holder {
+		position: relative;
+	}
+	.progress-title {
+		font-size: 15px;
+		font-weight: 600;
+		margin-bottom: 15px;
+		display: block;
+		color: $heading-color;
+	}
+	.progress-number-wrapper {
+		width: 100%;
+		z-index: 10;
+		font-size: 11px;
+		line-height: 24px;
+		height: 24px;
+		letter-spacing: 0px;
+		font-weight: 600;
+		font-style: normal;
+		text-transform: none;
+		color: $white-color;
+	}
+	.progress-number-mark {
+		margin-bottom: 4px;
+		border-radius: 3px;
+		color: $heading-color;
+		padding: 0 8px;
+		position: absolute;
+		bottom: 0;
+		transform: translateX(-50%);
+		font-size: 16px;
+		font-weight: 600;
+	}
+	.down-arrow {
+		border: 3px solid $main-color;
+		position: absolute;
+		left: 66%;
+		top: 147%;
+		height: 20px;
+		width: 20px;
+		border-radius: 50px;
+		transform: translateX(-50%);
+	}
+	.progress-content-outter {
+		height: 6px;
+		background-color: #f5f5f5;
+		border-radius: 50px;
+	}
+	.progress-content {
+		height: 6px;
+		background-color: $main-color;
+		width: 0%;
+		border-radius: 50px;
 	}
 }
 .who-we-are-img {
 	margin-left: 71px;
 	img {
 		border-radius:10px 325px 325px 10px;
+	}
+}
+.who-we-are-img-two {
+	margin-left: -390px;
+}
+.who-we-are-content-two {
+	margin-left: 60px;
+	h2 {
+		font-size: 45px;
+		font-weight: 600;
+		line-height: 1.222;
+		margin-bottom: 30px;
+	}
+	p {
+		margin-bottom: 30px;
+	}
+	.skill-bar {
+		.progress-content-outter {
+			background-color: $white-color;
+		}
+		.progress-content {
+			background-color: $warm-blue-color;
+		}
+		.down-arrow {
+			border-color: $warm-blue-color;
+		}
+		.progress-title {
+			font-weight: 400;
+			font-size: 16px;
+		}
+		.percent {
+			font-weight: 400;
+			font-size: 16px;
+		}
+	}
+	
+}
+.who-we-are-area {
+	position: relative;
+	z-index: 1;
+	&::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 100px;
+		background-color: $white-color;
+		z-index: -1;
 	}
 }
 
@@ -1774,6 +1837,20 @@ textarea {
 			color:#A9A9AF;
 		}
 	}
+	&.style-three {
+		p {
+			font-size: 22px;
+			font-weight: 400;
+			font-style: unset;
+			color: #666666;
+			border-color: #DADADA;
+		}
+		.info {
+			span {
+				color: #666666;
+			}
+		}
+	}
 }
 .testimonial-slide-two {
 	&.owl-carousel {
@@ -1804,6 +1881,22 @@ textarea {
 				}
 			}
 		}
+	}
+}
+.testimonial-img-three {
+	margin-right: -440px;
+}
+.testimonials-area-three {
+	position: relative;
+	z-index: 1;
+	&::before {
+		content: "";
+		position: absolute;
+		top: 0;
+		width: 100%;
+		height: 100px;
+		background-color: $white-color;
+		z-index: -1;
 	}
 }
 
@@ -1878,6 +1971,78 @@ textarea {
 		}
 	}
 }
+.case-study-single-item-three {
+	margin-bottom: 100px;
+	position: relative;
+	.case-study-img {
+		margin-bottom: 20px;
+	}
+	.tags {
+		line-height: 1;
+		margin-bottom: 15px;
+		li {
+			position: relative;
+			&::before {
+				content: "";
+				position: absolute;
+				top: 0;
+				right: -8px;
+				width: 1px;
+				height: 100%;
+				background-color: #666666;
+				transform: rotate(15deg);
+			}
+			a {
+				text-decoration: none;
+			}
+			&:last-child {
+				&::before {
+					display: none;
+				}
+			}
+		}
+	}
+	h3 {
+		a {
+			font-size: 25px;	
+			font-weight: 600;
+			line-height: 1.3;
+			text-decoration: none;
+			color: #121212;
+			&:hover {
+				a {
+					color: $warm-blue-color;
+				}
+			}
+		}
+	}
+	.circle-btn {
+		position: absolute;
+		bottom: -94px;
+		left: 0;
+		opacity: 0;
+	}
+	&:hover {
+		h3 {
+			a {
+				color: $warm-blue-color;
+			}
+		}
+		.circle-btn {
+			opacity: 1;
+		}
+	}
+	
+}
+.marquee-area-three {
+	.row {
+		--bs-gutter-x: 100px;
+	}
+	.mt-100 {
+		margin-top: 100px;
+	}
+}
+
 
 /*
 22 - FAQ Style
@@ -2165,6 +2330,71 @@ textarea {
 .copyright-area {
 	background-color: #191928;
 }
+.footer-single-item-three {
+	h2 {
+		font-size: 60px;
+		font-weight: 600;
+		line-height: 1.22;
+		margin-bottom: 0;
+	}
+	.social-link {
+		max-width: 170px;
+		li {
+			border: 1px solid #DBDBDB;
+			border-bottom: none;
+			&:first-child {
+				border-top: none;
+				padding-top: 30px;
+			}
+			&:last-child {
+				border-bottom: none;
+				padding-bottom: 30px;
+			}
+			a {
+				text-decoration: none;
+				padding: 20px 30px;
+				display: block;
+				color: #121212;
+				&:hover {
+					color: $warm-blue-color;
+				}
+			}
+		}
+	}
+	p {
+		margin-bottom: 30px;
+	}
+	.main-btn {
+		border-radius: 5px;
+		background-color: transparent;
+		border: 1px solid #121212;
+		color: #121212;
+		&:hover {
+			border-color: $warm-blue-color;
+			background-color: $warm-blue-color;
+			color: $white-color;
+		}
+	}
+}
+.footer-menu {
+	border-top: 1px solid #DBDBDB;
+	border-bottom: 1px solid #DBDBDB;
+	padding: 30px 0;
+	ul {
+		li {
+			a {
+				text-decoration: none;
+			}
+		}
+	}
+}
+.copyright {
+	text-align: center;
+	padding: 30px 0;
+	span {
+		color: $warm-blue-color;
+	}
+}
 
 /*
 25 - Footer Style
@@ -2235,6 +2465,43 @@ textarea {
 }
 .services-wrap {
 	margin-right: -500px;
+}
+.services-single-item-three {
+	background-color: #F6F5F3;
+	padding: 40px 30px;
+	transition: $transition;
+	margin-bottom: 25px;
+	img {
+		margin-bottom: 20px;
+	}
+	h3 {
+		font-size: 25px;
+		font-weight: 600;
+		margin-bottom: 20px;
+		a {
+			color: #121212;
+			text-decoration: none;
+		}
+	}
+	p {
+		margin-bottom: 20px;
+	}
+	.read-more {
+		font-size: 18px;
+		color: #121212;
+		text-decoration: none;
+		&:hover {
+			color: $warm-blue-color;
+		}
+	}
+	&:hover {
+		transform: translateY(-5px);
+		h3 {
+			a {
+				color: $warm-blue-color;
+			}
+		}
+	}
 }
 
 /*
@@ -2448,6 +2715,23 @@ textarea {
 			}
 		}
 	}
+	&.style-two {
+		background-color: $white-color;
+		padding: 0;
+		.social-link {
+			bottom: 0;
+			right: 0;
+			li {
+				i {
+					background-color: #4A5FE1;
+					color: $white-color;
+					&:hover {
+						background-color: $optional-color;
+					}
+				}
+			}
+		}
+	}
 	&:hover {
 		transform: translateY(-5px);
 	}
@@ -2499,6 +2783,24 @@ textarea {
 				&::before {
 					top: 0;
 				}
+			}
+		}
+		h1 {
+			display:  inline-block;
+			white-space: nowrap;
+			color: transparent;
+			-webkit-text-stroke: 1px #121212;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
+			text-align: center;
+			font-size: 170px;
+			font-weight: 700;
+			line-height: 1;
+			margin-bottom: 0;
+			&.block {
+				color: #121212;
 			}
 		}
 	}
@@ -2627,6 +2929,33 @@ textarea {
 		&:hover {
 			background-color: $main-color;
 			border-color: $main-color;
+		}
+	}
+}
+
+/* Video Area Style
+<<<<======================================================>>>>*/
+.video-img-wrap {
+	position: relative;
+	img {
+		transition: $transition;
+	}
+	.video-btns {
+		text-align: center;
+		i {
+			color: $warm-blue-color;
+			font-size: 25px;
+			width: 75px;
+			height: 75px;
+			line-height: 75px;
+			background-color: $white-color;
+			border-radius: 50px;
+			display: inline-block;
+		}
+	}
+	&:hover {
+		img {
+			opacity: 0.5;
 		}
 	}
 }
