--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -593,6 +593,59 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
             }
         }
     }
+    .service-details-content {
+        h2 {
+            font-size: 25px;
+        }
+        p {
+            font-size: 15px;
+        }
+    }
+    .sidebar-widget {
+        max-width: 100%;
+    }
+
+    /** Cases Details Area CSS
+    ============================**/
+    .cases-details-top-content {
+        padding: 30px 0;
+        h2 {
+            font-size: 25px;
+            margin-bottom: 20px;
+        }
+    }
+
+    /** Blog Details Area CSS
+    ============================**/
+    .blog-details-content {
+        .blog-details-img {
+            margin-bottom: 20px;
+        }
+        h2 {
+            font-size: 25px;
+        }
+        .mb-60 {
+            margin-bottom: 30px;
+        }
+        blockquote {
+            padding: 20px;
+            img {
+                margin-bottom: 20px;
+            }
+            p {
+                font-size: 20px;
+                margin-bottom: 15px;
+            }
+            span {
+                font-size: 16px;
+            }
+        }
+        .tags-share {
+            padding-top: 30px;
+            padding-bottom: 30px;
+            margin-bottom: 30px;
+        }
+    }
     
     
     
@@ -1110,6 +1163,62 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
         }
     }
 
+    /** Service Details Area CSS
+    ============================**/
+    .service-details-content {
+        h2 {
+            font-size: 25px;
+        }
+        p {
+            font-size: 15px;
+        }
+    }
+    .sidebar-widget {
+        max-width: 100%;
+    }
+
+    /** Cases Details Area CSS
+    ============================**/
+    .cases-details-top-content {
+        padding: 30px 0;
+        h2 {
+            font-size: 25px;
+            margin-bottom: 20px;
+        }
+    }
+
+    /** Blog Details Area CSS
+    ============================**/
+    .blog-details-content {
+        .blog-details-img {
+            margin-bottom: 20px;
+        }
+        h2 {
+            font-size: 25px;
+        }
+        .mb-60 {
+            margin-bottom: 30px;
+        }
+        blockquote {
+            padding: 20px;
+            img {
+                margin-bottom: 20px;
+            }
+            p {
+                font-size: 20px;
+                margin-bottom: 15px;
+            }
+            span {
+                font-size: 16px;
+            }
+        }
+        .tags-share {
+            padding-top: 30px;
+            padding-bottom: 30px;
+            margin-bottom: 30px;
+        }
+    }
+    
     
   
     
@@ -1374,6 +1483,24 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
         --bs-gutter-x: 1.5rem;
     }
 
+    /** Cases Details Area CSS
+    ============================**/
+    .cases-details-top-content {
+        h2 {
+            font-size: 30px;
+        }
+    }
+
+    .blog-details-content {
+        h2 {
+            font-size: 40px;
+        }
+        blockquote {
+            p {
+                font-size: 25px;
+            }
+        }
+    }
      
     
 
