--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -391,23 +391,25 @@ textarea {
 		width: 45px;
 		height: 45px;
 		line-height: 45px;
-		color: #898c90;
+		color: $heading-color;
 		text-align: center;
 		display: inline-block;
 		position: relative;
 		margin-left: 3px;
 		margin-right: 3px;
-		font-size: 16px;
-		background-color: $white-color;
+		font-size: 20px;
+		font-weight: 700;
+		background-color: #EAEAEA;
 		box-shadow: $box-shadow;
-		border-radius: $border-radius;
+		border-radius: 50px;
+		text-decoration: none;
 		&:hover {
 			color: $white-color;
-			background-color: $optional-color;
+			background-color: $main-color;
 		}
 		i {
-			font-size: 16px;
-			font-weight: normal;
+			font-size: 20px;
+			font-weight: 700;
 		}
 		&.next {
 			top: 0;
@@ -415,8 +417,8 @@ textarea {
 	}
 	.page-count.current {
 		color: $white-color;
-		border-color: $optional-color;
-		background-color: $optional-color;
+		border-color: $main-color;
+		background-color: $main-color;
 	}
 }
 
@@ -1647,7 +1649,7 @@ textarea {
 	ul {
 		li {
 			font-weight: 600;
-			font-size: 18px;
+			font-size: 17px;
 			margin-bottom: 10px;
 			position: relative;
 			padding-left: 15px;
@@ -1683,6 +1685,27 @@ textarea {
 		p {
 			border-color: #F4F4F4;
 		}
+		.border-top {
+			padding-top: 30px;
+			margin-top: 30px;
+			border-color: #F4F4F4 !important;
+		}
+	}
+	&.style-three {
+		text-align: center;
+		padding-top: 0;
+		margin-top: 45px;
+		.icon {
+			margin: auto;
+			margin-bottom: 30px;
+			margin-top: -45px;
+			background-color: $white-color;
+		}
+		ul {
+			li {
+				display: inline-block;
+			}
+		}
 	}
 	&:hover {
 		transform: translateY(-5px);
@@ -1696,6 +1719,7 @@ textarea {
 			}
 		}
 		&.style-two {
+			border-color: #F4F4F4;
 			.icon {
 				img {
 					filter: brightness(100);
@@ -2703,8 +2727,28 @@ textarea {
 	p {
 		color: #A9A9AF;
 	}
+	&.style-two {
+		background: linear-gradient(0deg, #FFF 0%, #FFF 100%), #FFFAF4;
+		border: 1px solid #F4F4F4;
+		transition: $transition;
+		.tag {
+			color: $main-color;
+		}
+		h3 {
+			a {
+				color: $heading-color;
+			}
+		}
+		p {
+			color: $body-color;
+		}
+	}
 	&:hover {
 		border-color: rgba(255, 255, 255, 0.05);
+		&.style-two {
+			border-color: $main-color;
+			transform: translateY(-5px);
+		}
 	}
 }
 .cases-slide {
@@ -2979,6 +3023,7 @@ textarea {
 	background-color: #191928;
 	padding: 50px 30px;
 	margin-bottom: 25px;
+	transition: $transition;
 	.blog-img {
 		margin-bottom: 20px;
 	}
@@ -3021,6 +3066,34 @@ textarea {
 			color: $white-color;
 		}
 	}
+	&.style-two {
+		border: 1px solid #F4F4F4;
+		background-color: $white-color;
+		.date {
+			li {
+				span {
+					color: $main-color;
+				}
+			}
+		}
+		h3 {
+			a {
+				color: $heading-color;
+			}
+		}
+	}
+	&:hover {
+		transform: translateY(-5px);
+		&.style-two {
+			border-color: $main-color;
+			h3 {
+				a {
+					color: $main-color;
+				}
+			}
+		}
+	}
+	
 }
 
 /* Subscribe Newsletter Area Style
@@ -3099,5 +3172,232 @@ textarea {
 		img {
 			opacity: 0.5;
 		}
+	}
+}
+
+.service-details-content {
+	max-width: 875px;
+	.service-details-img {
+		margin-bottom: 30px;
+	}
+	h2 {
+		font-size: 35px;
+		margin-bottom: 20px;
+	}
+	.mb-30 {
+		margin-bottom: 30px;
+	}
+	p {
+		font-size: 18px;
+		font-weight: 600;
+	}
+}
+.sidebar-widget {
+	max-width: 318px;
+	margin-left: auto;
+	h3 {
+		font-size: 20px;
+		padding-bottom: 10px;
+		margin-bottom: 25px;
+		border-bottom: 1px solid rgba(253, 98, 25, 0.25);
+	}
+	.src-form {
+		.src-btn {
+			background-color: $main-color;
+			font-size: 20px;
+			height: 100%;
+			color: $white-color;
+			padding: 10px 18px;
+		}
+	}
+	.service-list {
+		li {
+			margin-bottom: 15px;
+			&:last-child {
+				margin-bottom: 0;
+			}
+			a {
+				font-size: 16px;
+				font-weight: 600;
+				color: #666;
+				text-decoration: none;
+				&:hover {
+					color: $main-color;
+				}
+			}
+		}
+	}
+}
+
+/* Cases Details Area Style
+<<<<======================================================>>>>*/
+.cases-details-top-content {
+	padding: 60px 0;
+	h2 {
+		font-size: 35px;
+		margin-bottom: 0;
+	}
+}
+.cases-details-content {
+	.cases-details-list {
+		li {
+			position: relative;
+			padding-left: 40px;
+			margin-bottom: 15px;
+			&::before {
+				content: "";
+				position: absolute;
+				top: 50%;
+				transform: translateY(-50%);
+				left: 0;
+				width: 24px;
+				height: 24px;
+				border: 2px solid $main-color;
+				border-radius: 50px;
+			}
+			&::after {
+				content: "";
+				position: absolute;
+				top: 50%;
+				transform: translateY(-50%);
+				left: 7px;
+				width: 10px;
+				height: 10px;
+				background-color: $main-color;
+				border-radius: 50px;
+			}
+		}
+	}
+	.mb-30 {
+		margin-bottom: 30px;
+	}
+	h3 {
+		font-size: 20px;
+		margin-bottom: 15px;
+	}
+}
+
+/* Blog Details Area Style
+<<<<======================================================>>>>*/
+.blog-details-content {
+	.blog-details-img {
+		margin-bottom: 60px;
+	}
+	h2 {
+		font-size: 48px;
+		margin-bottom: 20px;
+	}
+	p {
+		span {
+			font-size: 20px;
+			font-weight: 700;
+			color: $heading-color;
+		}
+	}
+	blockquote {
+		background-color: #F4F4F4;
+		padding: 50px;
+		margin-bottom: 0;
+		img {
+			margin-bottom: 30px;
+		}
+		p {
+			font-size: 35px;
+			font-weight: 700;
+			margin-bottom: 30px;
+			line-height: 1.3;
+		}
+		span {
+			font-size: 20px;
+			font-weight: 700;
+			position: relative;
+			padding-left: 50px;
+			&::before {
+				content: "";
+				position: absolute;
+				top: 50%;
+				left: 0;
+				width: 40px;
+				height: 2px;
+				background-color: #666;
+			}
+		}
+	}
+	.tags-share {
+		padding-top: 50px;
+		padding-bottom: 60px;
+		margin-bottom: 60px;
+		border-bottom: 1px solid #F4F4F4;
+		.tags-list {
+			li {
+				margin-right: 10px;
+				&:last-child {
+					margin-right: 0;
+				}
+				span {
+					font-size: 20px;
+					font-weight: 700;
+					color: $heading-color;
+				}
+				a {
+					border-radius: 100px;
+					border: 1px solid #F4F4F4;
+					text-decoration: none;
+					display: inline-block;
+					padding: 5px 20px;
+					&:hover {
+						background-color: $main-color;
+						border-color: $main-color;
+						color: $white-color;
+					}
+				}
+			}
+		}
+		.social-list {
+			li {
+				margin-right: 10px;
+				&:last-child {
+					margin-right: 0;
+				}
+				span {
+					font-size: 20px;
+					font-weight: 700;
+					color: $heading-color;
+				}
+				a {
+					font-size: 20px;
+					&:hover {
+						color: $main-color;
+					}
+				}
+			}
+		}
+	}
+	.mb-60 {
+		margin-bottom: 60px;
+	}
+}
+.post-a-comment {
+	.form-group {
+		margin-bottom: 25px;
+		.form-control {
+			background-color: $white-color;
+				border-color: #EFEFEF;
+				color: $heading-color;
+			font-size: 18px;
+			&::placeholder {
+				font-size: 18px;
+				font-weight: 600;
+			}
+			&:focus {
+				border-color: $main-color;
+			}
+		}
+	}
+	.circle-btn {
+		i {
+			border-color: $main-color;
+		}
+		color: $main-color !important;
 	}
 }
