--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -646,6 +646,27 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
             margin-bottom: 30px;
         }
     }
+
+    /** Contact main Area CSS
+    ============================**/
+    .contact-us-main-form {
+        padding: 25px;
+        h3 {
+            margin-bottom: 20px;
+        }
+        .form-group {
+            .form-control {
+                font-size: 14px;
+                &::placeholder {
+                    font-size: 14px;
+                }
+            }
+        }
+    }
+    .contact-info {
+        margin-left: 0;
+        margin-top: 30px;
+    }
     
     
     
@@ -1218,6 +1239,27 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
             margin-bottom: 30px;
         }
     }
+
+    /** Contact main Area CSS
+    ============================**/
+    .contact-us-main-form {
+        padding: 25px;
+        h3 {
+            margin-bottom: 20px;
+        }
+        .form-group {
+            .form-control {
+                font-size: 14px;
+                &::placeholder {
+                    font-size: 14px;
+                }
+            }
+        }
+    }
+    .contact-info {
+        margin-left: 0;
+        margin-top: 30px;
+    }
     
     
   
@@ -1491,6 +1533,8 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
         }
     }
 
+    /** Blog Details Area CSS
+    ============================**/
     .blog-details-content {
         h2 {
             font-size: 40px;
@@ -1500,6 +1544,12 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
                 font-size: 25px;
             }
         }
+    }
+
+    /** Contact main Area CSS
+    ============================**/
+    .contact-info {
+        margin-left: 0;
     }
      
     
@@ -1598,6 +1648,12 @@ $box-shadow: 0 0 20px 3px rgba(0, 0, 0, 0.05);
         &::before {
             display: none;
         }
+    }
+
+    /** Contact main Area CSS
+    ============================**/
+    .contact-info {
+        margin-left: 0;
     }
 
 }
